--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "typescript-action",
-  "version": "0.0.0",
+  "name": "update-robots-txt-github-action",
+  "version": "0.0.1",
   "private": true,
   "description": "TypeScript template action",
   "main": "lib/main.js",
@@ -15,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/actions/typescript-action.git"
+    "url": "git@github.com:remix-austin/update-robots-txt-github-action.git"
   },
   "keywords": [
     "actions",
@@ -28,16 +28,16 @@
     "@actions/core": "^1.10.0"
   },
   "devDependencies": {
-    "@types/node": "^18.11.0",
-    "@typescript-eslint/parser": "^4.33.0",
-    "@vercel/ncc": "^0.31.1",
-    "eslint": "^7.32.0",
-    "eslint-plugin-github": "^4.3.2",
-    "eslint-plugin-jest": "^25.3.2",
-    "jest": "^27.2.5",
+    "@types/node": "^18.11.18",
+    "@typescript-eslint/parser": "^5.48.2",
+    "@vercel/ncc": "0.36.0",
+    "eslint": "^8.32.0",
+    "eslint-plugin-github": "^4.6.0",
+    "eslint-plugin-jest": "^27.2.1",
+    "jest": "^29.3.1",
     "js-yaml": "^4.1.0",
-    "prettier": "2.5.1",
-    "ts-jest": "^27.1.2",
-    "typescript": "^4.4.4"
+    "prettier": "2.8.3",
+    "ts-jest": "^29.0.5",
+    "typescript": "^4.9.4"
   }
 }
