--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,6 +5,7 @@ on: # rebuild any PRs and main branch changes
     branches:
       - main
       - 'releases/*'
+      - 'gkn/*'
 
 jobs:
   build: # make sure build/ci work properly
@@ -21,4 +22,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ./
         with:
-          milliseconds: 1000
+          robots-txt: |
+            User-agent: *
+            Disallow: /
+          file-path: '/'
