--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -13,16 +13,12 @@ name: '🕵️ CodeQL'
 
 on:
   push:
-    # TODO: re-enable this before merging to main!
-    paths-ignore:
-      - 'gkn/**'
-    branches: [main]
+    branches:
+      - main
   pull_request:
-    # TODO: re-enable this before merging to main!
-    paths-ignore:
-      - 'gkn/**'
+    # TODO: 🚧 Re-enable this before merging to main!
     # The branches below must be a subset of the branches above
-    branches: [main]
+    # branches: [main]
   schedule:
     - cron: '31 7 * * 3'
 
